# microclaw-streams

./: .gitignore  Makefile  README.md  demo.html  index.html  pyproject.toml  requirements.txt  voice-claude.py
microclaw_streams/: __init__.py  claude.py  cli.py  recorder.py  speaker.py
