[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microclaw-streams"
version = "0.2.0"
description = "Push-to-talk voice conversations powered by Whisper and Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["voice", "whisper", "claude", "speech", "tts"]
authors = [
    { name = "Your Name", email = "you@example.com" },
]
maintainers = [
    { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "sounddevice",
    "openai-whisper",
    "claude-agent-sdk",
    "anyio",
]

[project.scripts]
microclaw-streams = "microclaw_streams.cli:run"

[project.urls]
Homepage = "https://github.com/visendi/microclaw-streams"
Repository = "https://github.com/visendi/microclaw-streams"
Issues = "https://github.com/visendi/microclaw-streams/issues"
